fix js/lua bindings

--- a/.gitignore
+++ b/.gitignore
@@ -165,3 +165,5 @@ tests/cpp-tests/Resources/audio
 /external/wp-8.1/
 /external/winrt/
 /external/winrt-8.1/
+/external/winrt_8.1/
+/external/wp_8.1/
