fix linux template

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -76,7 +76,7 @@ option(BUILD_EDITOR_SPINE "Build editor support for spine" ON)
 option(BUILD_EDITOR_COCOSTUDIO "Build editor support for cocostudio" ON)
 option(BUILD_EDITOR_COCOSBUILDER "Build editor support for cocosbuilder" ON)
 option(BUILD_CPP_TESTS "Build TestCpp samples" ${BUILD_CPP_TESTS_DEFAULT})
-option(BUILD_CPP_EMPTY_TESTS_DEFAULT "Build CppEmptyTest samples" ${BUILD_CPP_EMPTY_TESTS_DEFAULT})
+option(BUILD_CPP_EMPTY_TESTS "Build CppEmptyTest samples" ${BUILD_CPP_EMPTY_TESTS_DEFAULT})
 option(BUILD_LUA_LIBS "Build lua libraries" ${BUILD_LUA_LIBS_DEFAULT})
 option(BUILD_LUA_TESTS "Build TestLua samples" ${BUILD_LUA_TESTS_DEFAULT})
 option(BUILD_JS_LIBS "Build js libraries" OFF)
@@ -286,7 +286,7 @@ if(BUILD_CPP_TESTS)
   add_subdirectory(tests/cpp-tests)
 endif(BUILD_CPP_TESTS)
 
-if(BUILD_CPP_EMPTY_TESTS_DEFAULT)
+if(BUILD_CPP_EMPTY_TESTS)
   add_subdirectory(tests/cpp-empty-test)
 endif()
 
