--- a/tools/tolua/cocos2dx_studio.ini
+++ b/tools/tolua/cocos2dx_studio.ini
@@ -53,7 +53,7 @@ skip =  *::[^visit$ copyWith.* onEnter.* onExit.* ^description$ getObjectType .*
         ActionObject::[initWithDictionary initWithBinary],
         BaseData::[copy subtract],
         ActionTimelineCache::[getInstance loadActionTimelineFromXML],
-        ActionTimeline::[setFrameEventCallFunc]
+        ActionTimeline::[setFrameEventCallFunc setLastFrameCallFunc]
 
 rename_functions =  ActionManagerEx::[shareManager=getInstance purgeActionManager=destroyInstance],
                     SceneReader::[purgeSceneReader=destroyInstance]
