--- a/tests/cpp-empty-test/proj.tizen/.cproject
+++ b/tests/cpp-empty-test/proj.tizen/.cproject
@@ -250,6 +250,7 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="res"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Classes"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
@@ -607,6 +608,7 @@
 					<sourceEntries>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="res"/>
 						<entry flags="VALUE_WORKSPACE_PATH|RESOLVED" kind="sourcePath" name="src"/>
+						<entry flags="VALUE_WORKSPACE_PATH" kind="sourcePath" name="Classes"/>
 					</sourceEntries>
 				</configuration>
 			</storageModule>
