Template compiles in OSX using cmake. Template adds "Resource" to search path

--- a/templates/cpp-template-default/CMakeLists.txt
+++ b/templates/cpp-template-default/CMakeLists.txt
@@ -82,15 +82,9 @@ endif(MSVC)
 
 set(PLATFORM_SPECIFIC_SRC)
 set(PLATFORM_SPECIFIC_HEADERS)
-if(MACOSX OR APPLE)
+if(MACOSX)
 set(PLATFORM_SPECIFIC_SRC
-  proj.ios_mac/ios/main.m
-  proj.ios_mac/ios/RootViewController.mm
-  proj.ios_mac/ios/AppController.mm
-)
-set(PLATFORM_SPECIFIC_HEADERS
-  proj.ios_mac/ios/RootViewController.h
-  proj.ios_mac/ios/AppController.h
+  proj.ios_mac/mac/main.cpp
 )
 elseif(LINUX) #assume linux
 set(PLATFORM_SPECIFIC_SRC
@@ -109,6 +103,7 @@ endif()
 include_directories(
   /usr/local/include/GLFW
   /usr/include/GLFW
+  ${GLFW3_INCLUDE_DIRS}
   ${COCOS2D_ROOT}/cocos
   Classes
 )
