--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ cmake_minimum_required(VERSION 3.1)
 project(COCOS2D-X)
 
 # The version number
-set(COCOS2D_X_VERSION 3.5beta0)
+set(COCOS2D_X_VERSION 4.0alpha0)
 
 # Specify the project cmake module path and include CocosBuildHelpers.
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake/Modules")
