Fixed merge conflicts

--- a/tests/cpp-tests/CMakeLists.txt
+++ b/tests/cpp-tests/CMakeLists.txt
@@ -136,6 +136,7 @@ set(TESTS_SRC
   Classes/TouchesTest/TouchesTest.cpp
   Classes/TransitionsTest/TransitionsTest.cpp
   Classes/UserDefaultTest/UserDefaultTest.cpp
+  Classes/VibrateTest/VibrateTest.cpp
   Classes/ZwoptexTest/ZwoptexTest.cpp
   Classes/FileUtilsTest/FileUtilsTest.cpp
   Classes/ConfigurationTest/ConfigurationTest.cpp
